--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,10 +1,11 @@
 .backgrounds{
-  background-image: url('https://bestanimations.com/media/rain/512938024city-view-rain-falling-gif.gif');
+  background-image: url('../assets/ezgif-7-0de4b57f22dc.gif');
   background-size: 100%;
   background-size: cover;
   width: 100%;
   height: 100vh;
 }
+
 
 h2 {
   font-weight: 300;
@@ -12,7 +13,7 @@ h2 {
 
 
 svg {
-  fill: #dadada !important;
+  fill: #ff0000 !important;
 }
 
 a {
@@ -61,7 +62,7 @@ footer {
 }
 
 .search input {
-  background-color: rgba(255, 255, 255, 0.3);
+  background-color: rgb(255, 0, 0);
   border: 1px solid transparent;
   font-size: 13px;
   border-radius: 10px 0 0 10px;
@@ -91,13 +92,14 @@ footer {
   font-size: 13px;
   border-radius: 0 10px 10px 0;
   padding: 5px 10px 5px 8px;
-  color: #444444;
+  color: #ff0000;
 }
 
 .location h2 {
   margin: 20px 0;
-  font-weight: 400;
+  font-weight: bold;
   font-size: 30px;
+  color: #ff0000;
 }
 .current-weather .details li {
   width: 150px;
@@ -117,18 +119,19 @@ footer {
   font-family: "Roboto", sans-serif;
   font-weight: 500;
   margin-left: 20px;
-  color: #ffffff;
+  color: #ff0000;
 }
 
 .current-weather .weather .description {
   float: left;
   margin-left: 30px;
+  color: #ff0000;
 }
 
 .current-weather .weather .description h2 {
-  color: #ffffff;
+  color: #ff0000;
   font-size: 30px;
-  font-weight: 400;
+  font-weight: bold;
   margin-bottom: 0;
 }
 
@@ -149,14 +152,15 @@ footer {
 }
 
 .current-weather .details span.information {
-  color: #ffffff;
+  color: #ff0000;
   font-weight: 400;
+  font-size: 15px;
 }
 
 .current-weather .details span.information i {
-  font-weight: 300;
-  color: #dadada;
-  font-size: 12px;
+  font-weight: bold;
+  color: #ff0000;
+  font-size: 18px;
   font-style: normal;
   display: block;
   text-transform: uppercase;
@@ -183,7 +187,7 @@ footer {
 }
 
 .daily-item h3 {
-  color: #ffffff;
+  color: #ff0000;
   font-size: 16px;
   margin: 0 0 5px 0;
 }
@@ -212,13 +216,13 @@ footer {
   display: block;
   font-size: 24px;
   font-weight: 600;
-  color: #ffffff;
+  color: #ff0000;
 }
 .daily-item span.temp-low {
   display: block;
   font-size: 24px;
   font-weight: 300;
-  color: #ffffff;
+  color: #ff0000;
 }
 
 .temperature-table {
@@ -228,14 +232,14 @@ footer {
 
 .temperature-table table {
   text-align: center;
-  font-weight: 400;
-  font-size: 14px;
-  color: #ffffff;
+  font-size: 20px;
+  color: #ff0000;
 }
 
 .temperature-table table thead {
-  color: #dadada;
-  font-weight: 300;
+  font-size: 20px;
+  color: #ff0000;
+  font-weight: bold;
 }
 
 .temperature-table table tr td {
@@ -245,14 +249,16 @@ footer {
 .temperature-table table tr td.subhead {
   text-align: left;
   text-transform: uppercase;
-  font-size: 13px;
-  font-weight: 300;
-  color: #dadada;
+  font-size: 20px;
+  color: #ff0000;
+  font-weight: bold;
 }
 
 .astro-details {
   float: left;
   margin-top: 40px;
+  color: #ff0000;
+  font-weight: bold;
 }
 
 .astro-details div {
@@ -281,6 +287,8 @@ footer {
 
 .astro-details span {
   display: block;
+  color: #ff0000;
+  font-weight: bold;
 }
 
 .instructions {
