--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 <div class="backgrounds">
-  <div class="container h-100 border border-info">
+  <div class="container h-100">
     <app-search [City]="city1"></app-search>
     <app-current></app-current>
-    <app-forecast></app-forecast>
+    <app-forecast (image)="backgroundChange($event)"></app-forecast>
     <app-table-and-daylight></app-table-and-daylight>
   </div>
 </div>
