--- a/src/app/components/current/current.component.html
+++ b/src/app/components/current/current.component.html
@@ -8,7 +8,7 @@
     </span>
     <span class="description">
       <h2>{{templist.description}}</h2>
-      <p style="color:white">{{templist.description}} is expected. The low will be {{templist.low|number:'1.0-0'}}°.</p>
+      <p>{{templist.description}} is expected. The low will be {{templist.low|number:'1.0-0'}}°.</p>
     </span>
   </div>
   <div class="details">
