--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,12 +1,18 @@
 .backgrounds{
   background-image: url('../assets/ezgif-7-0de4b57f22dc.gif');
-  background-size: 100%;
   background-size: cover;
+  background-repeat: no-repeat;
   width: 100%;
   height: 100vh;
 }
 
+.mat-progress-bar-indeterminate {
+  display: none;
+}
 
+.container{
+  padding-top: 20px;
+}
 h2 {
   font-weight: 300;
 }
