--- a/src/styles.css
+++ b/src/styles.css
@@ -4,3 +4,6 @@ html, body, app-root {
   margin: 0 !important;
   padding: 0 !important;
   }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
