--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="backgrounds">
   <div class="container h-100">
-    <app-search [City]="city1"></app-search>
+    <app-search [City]="city1" (image)="backgroundChange($event)"></app-search>
       <mat-progress-bar
       [mode]="'indeterminate'" color="accent" *ngIf="isCompleted">
       </mat-progress-bar>
